--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,17 +1,24 @@
-ruff
+pip
 pytype
 prospector
+coverage
 mypy
-django-stubs
+djangorestframework
 djangorestframework-stubs
+types-requests
+django-stubs
+openpyxl-stubs
+django-extensions
+python-dotenv
 pre-commit
 black
-Django
-django-extensions
-openpyxl
-python-dotenv
-Pillow
-lxml
-Markdown
-psycopg
-
+openpyxl==3.0.7
+redis
+psycopg==3.2.12
+sendgrid==6.9.7
+ruff
+schwifty
+# for pypi release only:
+setuptools
+build
+twine
